--- a/static/css/app.css
+++ b/static/css/app.css
@@ -16,7 +16,8 @@
 }
 
 body {
-    background-color: #3A506B;
+    background: rgb(11, 19, 43);
+    background: #3a506b;
 }
 
 .header {
@@ -47,7 +48,7 @@ body {
     text-decoration: none;
 }
 
-.logo img{
+.logo img {
     vertical-align: middle;
     width: 2.5rem;
     border-radius: 100%;
@@ -91,8 +92,33 @@ body {
     position: relative;
 }
 
-#publicidad img {
+.image {
     width: 100%;
+    position: relative;
+}
+
+.image img {
+    width: 100%;
+}
+
+.image::after {
+    content: "";
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient(to top, #3a506b, transparent);
+}
+
+
+#publicidad img::before {
+    content: "";
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(red 70%, orange 50%);
 }
 
 #publicidad h1 {
@@ -101,20 +127,13 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 8em;
-    color: #000;
+    color: #0000;
 }
 
-#categorias {
-    display: flex;
-    gap: 1rem;
-    position: absolute;
-    top: 90%;
-    justify-content: center;
-}
-
-#categorias img {
-    width: 100%;
-    height: 100%;
+h3 {
+    margin: 0.2rem 0;
+    font-size: larger;
+    color: #0b132b;
 }
 
 .card {
@@ -127,11 +146,6 @@ body {
     background-color: rgb(255, 255, 255);
     color: black;
     padding: 0.5rem 1rem;
-}
-
-.card h3 {
-    font-size: larger;
-    margin-bottom: 0.5rem;
 }
 
 .card a {
@@ -153,17 +167,59 @@ body {
 .card-item {
     display: flex;
     flex-direction: row;
+    gap: 0.5rem;
+}
+
+#categorias {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
     gap: 1rem;
+    top: 65%;
+    justify-content: center;
+}
+
+#categorias img {
+    width: 100%;
+    height: 100%;
+}
+
+#categorias .card {
+    width: 20%;
+}
+
+#productos {
+    margin-top: 10rem;
+    margin-bottom: 2rem;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 1.5rem 1rem;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.15);
+    background-color: rgb(255, 255, 255);
+    color: black;
+    padding: 0.5rem 1rem;
 }
 
 #productos .card {
-    margin: 1.5rem 1rem;
+    margin: 0;
+    padding: 0;
     flex-direction: column;
     flex-wrap: wrap;
+    box-shadow: none;
+    border-radius: 0;
     overflow: scroll;
     overflow-y: hidden;
     scrollbar-width: thin;
-    border-radius: 0;
+    scrollbar-color: #fff #fff;
+    transition: all 0.8s;
+}
+
+#productos .card:hover {
+    scrollbar-color: #1C2541 #fff;
 }
 
 footer {
@@ -181,7 +237,8 @@ footer a {
     transition: all 0.1s;
 }
 
-footer .redes a:hover, li a:hover{
+footer .redes a:hover,
+li a:hover {
     color: #5BC0BE;
     text-decoration: underline;
 }
@@ -217,11 +274,11 @@ footer .footer-items {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4rem;
+    gap: 3rem;
     margin-top: 3rem;
 }
 
-footer .redes ul{
+footer .redes ul {
     display: flex;
     flex-direction: row;
     align-items: center;
