--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,295 +1,341 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'PT Sans', sans-serif;
-    font-size: 18px;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  scroll-behavior: smooth;
 }
 
 *::selection {
-    background: #3A506B;
-    color: black;
-    text-shadow: 1px 1px #5BC0BE;
+  background: #3a506b;
+  color: black;
+  text-shadow: 1px 1px #5bc0be;
 }
 
 body {
-    background: rgb(11, 19, 43);
-    background: #3a506b;
+  background: rgb(11, 19, 43);
+  background: #3a506b;
 }
 
 .header {
-    background-color: #0B132B;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 2rem;
+  background-color: #0b132b;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 2rem;
 }
 
 .header a {
-    text-decoration: none;
-    font-size: 700;
-    color: white;
+  text-decoration: none;
+  font-size: 700;
+  color: white;
 }
 
 .header .nav-link {
-    list-style: none;
+  gap: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header .nav-link li {
-    display: inline-block;
+  gap: 1rem;
+  display: flex;
 }
 
 .header .nav-link a {
-    font-size: 700;
-    color: white;
-    text-decoration: none;
+  font-size: 700;
+  color: white;
+  text-decoration: none;
 }
 
 .logo img {
-    vertical-align: middle;
-    width: 2.5rem;
-    border-radius: 100%;
+  vertical-align: middle;
+  width: 2.5rem;
+  border-radius: 100%;
 }
 
 .form-search {
-    background-color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    border-radius: 50px;
-    transition: all 0.1s;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.1s;
 }
 
 .form-search:hover {
-    border: 3px solid #3A506B;
+  border: 3px solid #3a506b;
 }
 
 .form-search input {
-    background-color: #FFFFFF;
-    border: 1px solid #FFFFFF;
-    outline: none;
-    box-sizing: border-box;
-    height: 35px;
-    border-radius: 50px;
-    margin-left: 1rem;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  outline: none;
+  box-sizing: border-box;
+  height: 35px;
+  border-radius: 50px;
+  margin-left: 1rem;
 }
 
 .form-search button {
-    background-color: #FFFFFF;
-    border: 1px solid #FFFFFF;
-    width: 35px;
-    height: 35px;
-    border-end-end-radius: 50%;
-    border-start-end-radius: 50%;
-    cursor: pointer;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  width: 35px;
+  height: 35px;
+  border-end-end-radius: 50%;
+  border-start-end-radius: 50%;
+  cursor: pointer;
 }
 
-#publicidad {
-    position: relative;
+.carrousel {
+  width: 100%;
+  max-width: 120em;
+  background-color: #ffffff;
+  margin-bottom: 2rem;
+  overflow-x: hidden;
+}
+
+.carrousel .grande {
+  width: 200%;
+
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+
+.carrousel .img {
+  width: calc(100% / 2);
+}
+
+.carrousel .puntos {
+  top: 83%;
+  width: 100%;
+  padding: 1em;
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+
+.carrousel .punto {
+  width: 0.5em;
+  height: 0.5em;
+  margin: 1em;
+  border: 1px gray solid;
+  border-radius: 100%;
+}
+
+.carrousel .punto.activo {
+  background-color: #ffffff;
+}
+
+/* #publicidad {
+  position: relative;
 }
 
 .image {
-    width: 100%;
-    position: relative;
+  width: 100%;
+  position: relative;
 }
 
 .image img {
-    width: 100%;
+  width: 100%;
 }
 
 .image::after {
-    content: "";
-    width: 100%;
-    height: 300px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-image: linear-gradient(to top, #3a506b, transparent);
+  content: "";
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-image: linear-gradient(to top, #3a506b, transparent);
 }
-
 
 #publicidad img::before {
-    content: "";
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: linear-gradient(red 70%, orange 50%);
-}
+  content: "";
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(red 70%, orange 50%);
+} */
 
-#publicidad h1 {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 8em;
-    color: #0000;
-}
+/* #publicidad h1 {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 8em;
+  color: #0000;
+} */
 
 h3 {
-    margin: 0.2rem 0;
-    font-size: larger;
-    color: #0b132b;
+  margin: 0.2rem 0;
+  font-size: larger;
+  color: #0b132b;
 }
 
 .card {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: auto 1rem;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    color: black;
-    padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: auto 1rem;
+  box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  color: black;
+  padding: 0.5rem 1rem;
 }
 
 .card a {
-    margin-top: 0.5rem;
-    text-decoration: none;
-    color: #1ab9b6;
+  margin-top: 0.5rem;
+  text-decoration: none;
+  color: #1ab9b6;
 }
 
 .card a:hover {
-    color: #5BC0BE;
-    text-decoration: underline;
+  color: #5bc0be;
+  text-decoration: underline;
 }
 
 .card-item img {
-    width: 15rem;
-    height: 15rem;
+  width: 15rem;
+  height: 15rem;
 }
 
 .card-item {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
 }
 
 #categorias {
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    gap: 1rem;
-    top: 65%;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
 }
 
 #categorias img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #categorias .card {
-    width: 20%;
+  width: 20%;
 }
 
 #productos {
-    margin-top: 10rem;
-    margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: 1.5rem 1rem;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.15);
-    background-color: rgb(255, 255, 255);
-    color: black;
-    padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 1.5rem 1rem;
+  box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.15);
+  background-color: rgb(255, 255, 255);
+  color: black;
+  padding: 0.5rem 1rem;
 }
 
 #productos .card {
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    flex-wrap: wrap;
-    box-shadow: none;
-    border-radius: 0;
-    overflow: scroll;
-    overflow-y: hidden;
-    scrollbar-width: thin;
-    scrollbar-color: #fff #fff;
-    transition: all 0.8s;
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  flex-wrap: wrap;
+  box-shadow: none;
+  border-radius: 0;
+  overflow: scroll;
+  overflow-y: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: #fff #fff;
+  transition: all 0.8s;
 }
 
 #productos .card:hover {
-    scrollbar-color: #1C2541 #fff;
+  scrollbar-color: #1c2541 #fff;
 }
 
 footer {
-    display: block;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 2rem;
-    background-color: #0B132B;
+  display: block;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 2rem;
+  background-color: #0b132b;
 }
 
-
 footer a {
-    text-decoration: none;
-    color: #3A506B;
-    transition: all 0.1s;
+  text-decoration: none;
+  color: #3a506b;
+  transition: all 0.1s;
 }
 
 footer .redes a:hover,
 li a:hover {
-    color: #5BC0BE;
-    text-decoration: underline;
+  color: #5bc0be;
+  text-decoration: underline;
 }
 
 .volver {
-    text-align: center;
-    background-color: #1C2541;
-    padding: 1rem 0px;
-    transition: all 0.1s ease;
+  text-align: center;
+  background-color: #1c2541;
+  padding: 1rem 0px;
+  transition: all 0.1s ease;
 }
 
 .volver:hover {
-    filter: brightness(150%);
+  filter: brightness(150%);
 }
 
 .volver span {
-    text-decoration: none;
-    color: #3A506B;
+  text-decoration: none;
+  color: #3a506b;
 }
 
 footer ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    gap: 5rem;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 5rem;
 }
 
 footer .footer-menu li a {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 footer .footer-items {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
-    margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 3rem;
 }
 
 footer .redes ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-align: center;
-    gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  gap: 1rem;
 }
 
 footer .redes span {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 footer .redes .logo img:hover {
-    border-radius: 10px;
+  border-radius: 10px;
 }
