--- a/static/css/login.css
+++ b/static/css/login.css
@@ -4,6 +4,7 @@
   justify-content: center;
   margin: auto;
   margin-top: 3rem;
+  margin-bottom: 3rem;
   gap: 1.5rem;
   padding: 1rem;
   display: flex;
